# salesforce-erd

./: .gitignore  LICENSE  README.md  build_erd.py  config.json.template  pyproject.toml
salesforce_erd/: __init__.py
